[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/enemies/slimeBlue_blue.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Inimigo1.gd" type="Script" id=2]
[ext_resource path="res://sprites/enemies/slimeBlue.png" type="Texture" id=3]
[ext_resource path="res://sprites/enemies/slimeBlue_squashed.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "squashed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 29.5, 15.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 29, 6 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 39, 17 )

[node name="Inimigo" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 85
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.0124559, -6 )
scale = Vector2( 1.43816, 1.55588 )
frames = SubResource( 2 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 4 )
shape = SubResource( 3 )

[node name="Floor_Check" type="RayCast2D" parent="."]
position = Vector2( 0, -6 )
scale = Vector2( 1, 0.549587 )
enabled = true
collision_mask = 2
collide_with_areas = true

[node name="Top_Check" type="Area2D" parent="."]
position = Vector2( 2, -21 )
collision_layer = 128
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top_Check"]
shape = SubResource( 4 )

[node name="Sides_Check" type="Area2D" parent="."]
collision_layer = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sides_Check"]
position = Vector2( 1, 3 )
shape = SubResource( 5 )

[connection signal="body_entered" from="Top_Check" to="." method="_on_Top_Check_body_entered"]
[connection signal="body_entered" from="Sides_Check" to="." method="_on_Sides_Check_body_entered"]
